# AudioPlayer

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/murphy/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: player_jni.cpp
app/src/main/cpp/j4a/: j4a_base.cpp  j4a_base.h
app/src/main/cpp/j4a/player/: MPlayer.cpp  MPlayer.h
app/src/main/cpp/player/: m_player.cpp  m_player.h
app/src/main/cpp/tools/: m_cond.cpp  m_cond.h  m_mutex.cpp  m_mutex.h  m_thread.cpp  m_thread.h
app/src/main/cpp/utils/: m_log.h
app/src/main/java/com/murphy/player/: MPlayer.java  MainActivity.java
app/src/main/java/com/murphy/player/annotations/: AccessedByNative.java  CalledByNative.java
app/src/test/java/com/murphy/player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
